# FerroVault

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  handlers.rs  mod.rs
src/crypto/: asymmetric.rs  csprng.rs  hash.rs  mod.rs  symmetric.rs
src/sys/: io.rs  mod.rs  shredder.rs
src/utils/: logger.rs  memory.rs  mod.rs
